# apollo-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/apollo_cli/: __init__.py  __main__.py  app.py  context.py  help_reference.py  linkedin.py  output.py  util.py
src/apollo_cli/commands/: accounts.py  calls.py  contacts.py  conversations.py  custom_fields.py  deals.py  emails.py  enrich.py  install.py  jobs.py  news.py  notes.py  people.py  pipelines.py  tasks.py  usage.py
src/apollo_cli/formatters/: accounts.py  contacts.py  conversations.py  deals.py  generic.py  people.py
src/apollo_cli/skills/: SKILL.md  __init__.py
src/apollo_cli/skills/references/: __init__.py  account-workflows.md  contact-workflows.md  deal-workflows.md
tests/: conftest.py  test_commands.py  test_context.py  test_conversations_formatter.py  test_install.py  test_linkedin.py  test_output.py  test_util.py
