[project]
name = "apollo-cli"
version = "0.1.0"
description = "Agent-friendly CLI for the Apollo API"
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=3.0",
    "rich>=13.0",
    "apollo-client",
]

[project.scripts]
apollo = "apollo_cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apollo_cli"]

[tool.uv.sources]
apollo-client = { path = "../../libs/apollo" }
